Add an empty symfony project with base components

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-.idea
-vendor
-.docker/php/logs
+.idea/
+.docker/php/logs/
 composer.lock
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+symfony.lock
+###< symfony/framework-bundle ###
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
