--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,81 @@
   ],
   "require": {
     "php": ">=8.0",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "ext-json": "*",
+    "composer/package-versions-deprecated": "^1.0@dev",
+    "doctrine/annotations": "^1.0",
+    "doctrine/doctrine-bundle": "2.5.x-dev",
+    "doctrine/doctrine-migrations-bundle": "3.2.x-dev",
+    "doctrine/orm": "3.0.x-dev",
+    "phpdocumentor/reflection-docblock": "5.x-dev",
     "phpunit/phpunit": "^10.0",
-    "ext-json": "*"
+    "sensio/framework-extra-bundle": "^6.2",
+    "stof/doctrine-extensions-bundle": "1.6.x-dev",
+    "symfony/console": "5.3.*",
+    "symfony/dotenv": "5.3.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/framework-bundle": "5.3.*",
+    "symfony/http-kernel": "5.3.*",
+    "symfony/maker-bundle": "3.x-dev",
+    "symfony/property-access": "5.3.*",
+    "symfony/property-info": "5.3.*",
+    "symfony/proxy-manager-bridge": "5.3.*",
+    "symfony/runtime": "5.3.*",
+    "symfony/security-bundle": "5.3.*",
+    "symfony/serializer": "5.3.*",
+    "symfony/validator": "5.3.*",
+    "symfony/yaml": "5.3.*"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
     }
+  },
+
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": {
+      "*": "dist"
+    },
+    "sort-packages": true
+  },
+  "replace": {
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php72": "*"
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "5.3.*"
+    }
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd",
+      "security-checker security:check": "script"
+    }
+  },
+  "require-dev": {
+    "fzaninotto/faker": "1.9.x-dev",
+    "sensiolabs/security-checker": "6.0.x-dev",
+    "symfony/browser-kit": "5.3.*",
+    "symfony/css-selector": "5.3.*",
+    "symfony/debug-bundle": "5.3.*",
+    "symfony/monolog-bundle": "^3.0",
+    "symfony/phpunit-bridge": "6.0.x-dev",
+    "symfony/stopwatch": "5.3.*",
+    "symfony/web-profiler-bundle": "5.3.*"
   }
 }
