--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "symfony/security-bundle": "5.3.*",
     "symfony/serializer": "5.3.*",
     "symfony/validator": "5.3.*",
+    "symfony/var-dumper": "5.3.*",
     "symfony/yaml": "5.3.*"
   },
   "autoload": {
