--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  db:
+    build: './.docker/mysql'
+    ports:
+      - "3332:3306"
+    volumes:
+      - ./.docker/mysql/data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: my_db
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
   php: # docker-compose run php bash
     build: './.docker/php'
     tty: true
@@ -10,6 +22,8 @@ services:
       - ./.docker/php/logs/error.log:/var/log/apache2/error.log
       - ./.docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - ./.docker/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+    depends_on:
+      - db
   composer:
     build: './.docker/composer'
     tty: true
