Add "before request" and "before response" event subscribers to allow cross-domains requests and parse json-requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       MYSQL_PASSWORD: admin
   php: # docker-compose run php bash
     build: './.docker/php'
+    ports:
+      - "8080:80"
     tty: true
     environment:
       PHP_IDE_CONFIG: "serverName=Docker"
