--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,9 +21,11 @@ security:
             security: false
         main:
             lazy: true
-            provider: app_user_provider
-            anonymous: true
-            logout: ~
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout:
+                path: app_security_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
