--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ composer.lock
 symfony.lock
 ###< symfony/framework-bundle ###
 ###> symfony/phpunit-bridge ###
+/.phpunit.cache/
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
