--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+DATABASE_URL=mysql://root:root@172.17.0.1:3332/my_db?serverVersion=8.0
