--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,7 +21,8 @@ security:
             security: false
         main:
             lazy: true
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            custom_authenticator:
+                - App\Security\AccessTokenAuthenticator
             logout:
                 path: security_logout
                 # where to redirect after logout
